catalog/assets/stylesheets/catalog.css
.forkme img {
  position: absolute;
  top: 0;
  right: 0;
  border: 0;
  z-index: 1000;
}

.fa-twitter:after {
  content: "x";
  font-size: 18px;
  color: red;
  font-weight: 800;
  margin-left: -16px;
}

body {
  background-color: #093272;
}

.navbar {
  border-radius: 0px;
  min-height: 120px;
  margin-bottom: 40px;
}

.navbar-default {
  background: #093272 url("../images/nav-bg.jpg") repeat scroll 0 0;
  border-color: #093272;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-brand:focus {
  font-family: 'Russo One', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 38px;
  line-height: 38px;
  font-weight: 800;
  color: #FFD700;
  margin-top: 30px;
  text-shadow: 3px 3px 4px #000;
}

.navbar-default .navbar-brand:hover {
  color: #D9FF0D;
}

@media screen and (max-width: 980px) {
  .navbar-default .navbar-brand,
  .navbar-default .navbar-brand:focus {
    font-size: 34px;
    line-height: 34px;
  }
}

@media screen and (max-width: 767px) {
  .navbar-default .navbar-brand,
  .navbar-default .navbar-brand:focus {
    margin-top: 5px;
    font-size: 32px;
    line-height: 32px;
  }
}

.btn-tardate {
  font-family: 'Russo One', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 26px;
}

.visible-xs-block .btn-tardate {
  font-size: 14px;
  min-width: 280px;
  max-width: unset;
  text-wrap: auto;
  text-align: left;
}

.linked {
  cursor: pointer; cursor: hand;
}

img.tardate-hero {
  height: 80px;
}

.visible-xs-block img.tardate-hero {
  width: 100%;
  height: auto;
  margin-top: 8px;
}

/* project article content format */

.markdown-body {
  font-size: 16px;
}

.markdown-body img {
  width: 1024px;
  max-width: 100%;
  box-sizing: content-box;
}

.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
  font-weight: 600;
  line-height: 1.25;
  margin-bottom: 16px;
  margin-top: 24px;
}

.markdown-body h1 {
  margin-top: 0px;
}

.markdown-body h2 {
  font-size: 1.5em;
}

.markdown-body h1, .markdown-body h2 {
  border-bottom: 1px solid #eaecef;
  padding-bottom: .3em;
}

.markdown-body table {
  display: block;
  overflow: auto;
  width: 100%;
  margin-bottom: 16px;
  margin-top: 0;
}

.markdown-body table tr {
  background-color: #fff;
  border-top: 1px solid #c6cbd1;
}

.markdown-body table tr:nth-child(2n) {
  background-color: #f6f8fa;
}

.markdown-body table td, .markdown-body table th {
  border: 1px solid #dfe2e5;
  padding: 6px 13px;
}

.markdown-body table th {
  font-weight: 600;
}

.social-icons-left, .social-icons-right {
  text-align: center;
  float: none;
}

.social-icons {
  padding: 0.5em 0 0 0;
  width: 100%;
  font-size: 20px;
}

.social-icons a.fa {
  cursor: pointer;
  opacity: 0.8;
  padding: 0.2em;
}

.social-icons a.fa:hover {
  opacity: 1;
}

.social-icons iframe[title=Flattr] {
  position: relative;
  top: 0.1em;
}

.site-header .social-icons-left {
  display: none;
}

footer {
  font-family: 'Russo One', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 20px;
  line-height: 20px;
  padding: 40px;
  text-align: center;
  font-weight: 800;
  color: #FFD700;
  text-shadow: 3px 3px 4px #000;
}

.social-icons-left {
  float: left;
}

.social-icons a,
.social-icons a:hover,
.social-icons a:focus,
.social-icons a:active {
  opacity: 0.8;
  color: #FFD700;
  background-image: none;
  text-shadow: none;
  text-decoration: none;
}

.social-icons a:hover {
  opacity: 1;
}

.clearfix::after {
  clear: both;
}

.clearfix::before, .clearfix::after {
  content: ' ';
  display: table;
}

.project-sidebar .list-group-item.active {
  font-weight: 800;
}

.project-sidebar .list-group-item.active > .badge.badge-success {
  color: #fff;
  background-color: #5cb85c;
  font-size: inherit;
  font-weight: 800;
  float: none;
  margin-right: 5px;
}

.project-gallery img {
  width: 60px;
  height: 60px;
  display: inline-block;
  margin: 0 0 3px 0;
}

.project-gallery > a {
  display: inline-block;
}

.list-group-item .note {
  font-size: smaller;
  opacity: 75%;
}

